--- a/configuration/config-server-git/src/main/resources/application.yml
+++ b/configuration/config-server-git/src/main/resources/application.yml
@@ -19,3 +19,7 @@ spring:
               uri: https://github.com/isc-carlos-gomez/pluralsight-spring-cloudconfig-wa-tolls-perf
               search-paths:
                 - 'station*'
+  security:
+    user:
+      name: pluralsight
+      password: pluralsight
