Add encryption for some configuration properties

--- a/configuration/config-client/src/main/resources/bootstrap.properties
+++ b/configuration/config-client/src/main/resources/bootstrap.properties
@@ -3,3 +3,4 @@ logging.level.web=TRACE
 spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.username=pluralsight
 spring.cloud.config.password=pluralsight
+encrypt.key=ABCDEFGHIJKLMNOPQRSTUVWXYZ
