--- a/async-tasks/task/build.gradle
+++ b/async-tasks/task/build.gradle
@@ -19,7 +19,9 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.cloud:spring-cloud-starter-task'
+	implementation 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
