--- a/async-tasks/task/src/main/resources/application.properties
+++ b/async-tasks/task/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=Toll Processor
 logging.level.org.springframework.cloud.task=DEBUG
+logging.level.sql=TRACE
+
+spring.datasource.url=jdbc:mysql://localhost/tasklogs
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
