--- a/async-tasks/taskintake/build.gradle
+++ b/async-tasks/taskintake/build.gradle
@@ -1,7 +1,6 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.6.RELEASE'
 	id 'java'
-	id 'maven-publish'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -9,6 +8,13 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.krloxz.demo'
 version = '1.0.0'
 sourceCompatibility = '11'
+
+configurations {
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
 
 repositories {
 	mavenCentral()
@@ -19,11 +25,13 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-task'
-	implementation 'mysql:mysql-connector-java'
+	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
 }
 
 dependencyManagement {
@@ -31,12 +39,3 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
-
-publishing {
-	publications {
-		maven(MavenPublication) {
-			from components.java
-		}
-	}
-}
-
