Add an authorization server secured with Spring Security
Also a client application was created to demo the password grant flow.

--- a/security/secureservice/src/main/resources/application.properties
+++ b/security/secureservice/src/main/resources/application.properties
@@ -3,4 +3,5 @@ server.servlet.context-path=/services
 server.servlet.session.persistent=false
 logging.level.web=TRACE
 logging.level.org.springframework.security=TRACE
-security.oauth2.resource.user-info-uri=https://api.github.com/user
+#security.oauth2.resource.user-info-uri=https://api.github.com/user
+security.oauth2.resource.user-info-uri=http://localhost:9000/services/user
