--- a/tracing/dataservice1/src/main/resources/application.properties
+++ b/tracing/dataservice1/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.servlet.context-path=/fastpass
 
 spring.application.name=ContactDetails
 logging.level.org.springframework.cloud.sleuth=TRACE
+
+spring.sleuth.sampler.rate=100
+spring.zipkin.base-url=http://localhost:9411/
