--- a/service-discovery/pluralsight-eureka-fastpass-console/build.gradle
+++ b/service-discovery/pluralsight-eureka-fastpass-console/build.gradle
@@ -28,8 +28,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	  testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 dependencyManagement {
