--- a/service-discovery/pluralsight-eureka-tollrate-billboard/src/main/resources/application.properties
+++ b/service-discovery/pluralsight-eureka-tollrate-billboard/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8081
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+management.endpoints.web.exposure.include=*
+#management.endpoints.web.base-path=/
